<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Adopter.AdopterSettings.ManageProfileActivity">


    <TextView
        android:id="@+id/info4"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:text="@string/contInf4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info3" />

    <TextView
        android:id="@+id/info3"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:text="@string/contInf3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info2" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/bottomNavigationView_subordinate"
        app:menu="@menu/bottom_nav_menu_subordinates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/info"
        android:layout_width="232dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:text="@string/contInf"
        android:textStyle="bold"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:text="@string/contInf2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />


</androidx.constraintlayout.widget.ConstraintLayout>