<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".View.Animals.ShowAnimals.SearchAnimalsActivity"
>

    <ImageView
        android:id="@+id/animalPic"
        android:layout_width="127dp"
        android:layout_height="134dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="60dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/animalAge"
        app:layout_constraintTop_toBottomOf="@+id/breed" />

    <TextView
        android:id="@+id/animalAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/animalAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalBreed" />

    <TextView
        android:id="@+id/animalBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/animalBreed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalType" />

    <TextView
        android:id="@+id/animalType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/animalType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalName" />

    <TextView
        android:id="@+id/type"
        android:layout_width="54dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/animalType"
        app:layout_constraintTop_toBottomOf="@+id/animalName" />

    <TextView
        android:id="@+id/chipped"
        android:layout_width="48dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/animalChipped"
        app:layout_constraintTop_toBottomOf="@+id/gender" />

    <TextView
        android:id="@+id/animalChipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/animalChipped"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalGender" />

    <TextView
        android:id="@+id/animalDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/animalDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalChipped" />

    <TextView
        android:id="@+id/breed"
        android:layout_width="59dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/animalBreed"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <TextView
        android:id="@+id/description"
        android:layout_width="41dp"
        android:layout_height="17dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toEndOf="@+id/animalDescription"
        app:layout_constraintTop_toBottomOf="@+id/chipped" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="59dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/animalGender"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/animalGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/animalGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalAge" />

    <TextView
        android:id="@+id/animalName"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="197dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalPic" />

</androidx.constraintlayout.widget.ConstraintLayout>